# carsensor-backend

./: conftest.py  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy.yml  docker.yml
apps/authentication/: serializers.py  urls.py
apps/cars/: admin.py  apps.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/cars/migrations/: 0001_initial.py  0002_widen_model_field.py
apps/cars/tests/: test_views.py
apps/scraper/: apps.py  parser.py  tasks.py  translator.py
config/: exceptions.py  storage_backends.py  urls.py
config/settings/: base.py  development.py  production.py  testing.py
docker/: Dockerfile.prod
